--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -8,14 +8,14 @@
   <title>SMS scheduling site</title>
 
   <!--css stylesheets-->
-  <link href="jquery-ui-1.11.4/jquery-ui.min.css" rel="stylesheet">
-  <link href="css/material.min.css" rel="stylesheet">
+  <%= stylesheet_link_tag "jquery-ui.min" %>
+  <%= stylesheet_link_tag "material.min" %>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en'
         rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
-  <link href="date-time-picker/css/mdDateTimePicker.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <%= stylesheet_link_tag "mdDateTimePicker" %>
+  <%= stylesheet_link_tag "style" %>
 
 </head>
 
@@ -82,13 +82,12 @@
 </div>
 
 
-
-<script src="js/jquery-3.0.0.min.js"></script>
-<script src="jquery-ui-1.11.4/jquery-ui.min.js"></script>
-<script src="js/material.min.js"></script>
-<script src="date-time-picker/js/moment.min.js"></script>
-<script src="date-time-picker/js/draggabilly.pkgd.min.js"></script>
-<script src="date-time-picker/js/mdDateTimePicker.js"></script>
+<%= javascript_include_tag "jquery-3.0.0.min" %>
+<%= javascript_include_tag "jquery-ui.min" %>
+<%= javascript_include_tag "material.min" %>
+<%= javascript_include_tag "moment.min" %>
+<%= javascript_include_tag "draggabilly.pkgd.min" %>
+<%= javascript_include_tag "mdDateTimePicker" %>
 <script>
 
   $('.mdl-card__supporting-text').hide();
