fixed image path in style.css

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -5,7 +5,7 @@ html,body,.container-div {
     width: 100%;
     font-family: 'Roboto Mono',monospace !important;
     text-align: justify !important;
-    background-image: url('../bg.png');
+    background-image: url('bg.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
