--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SMS scheduling site</title>
 
+    <%= stylesheet_link_tag "home.style" %>
   </head>
 
   <body>
     <h1>Saved Campaigns</h1>
+
+    <p> <%= link_to 'Create New Campaign', "/home/new" %></p>
   </body>
 </html>
