--- a/app/assets/stylesheets/home.style.css
+++ b/app/assets/stylesheets/home.style.css
@@ -14,3 +14,13 @@ h1 {
     color : white;
     text-align: center;
 }
+
+p {
+    text-align: center;
+    font-size: 1.4em;
+}
+
+p a {
+    color: white;
+    text-decoration: none;
+}
