--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -13,45 +13,51 @@
       <span id="success">Success!</span>
     </div>
     <div class="mdl-card__supporting-text">
-      <form action="#">
 
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="text" id="campaign-name">
-          <label class="mdl-textfield__label" for="phone-number-receiver">Campaign Name</label>
-        </div>
+      <%= form_tag do %>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <!--<input class="mdl-textfield__input" type="text" id="campaign-name">-->
+            <%= text_field_tag :campaign_name,nil,:class => "mdl-textfield__input"%>
+            <label class="mdl-textfield__label" for="phone-number-receiver">Campaign Name</label>
+          </div>
 
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="phone-number-receiver">
-          <label class="mdl-textfield__label" for="phone-number-receiver">Phone Number for recipient</label>
-          <span class="mdl-textfield__error">Input is not a number!</span>
-        </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="phone-number-receiver">
+            <label class="mdl-textfield__label" for="phone-number-receiver">Phone Number for recipient</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
 
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="text" id="start-date">
-          <label class="mdl-textfield__label" for="start-date" id="start-date-label">Enter start date</label>
-        </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text" id="start-date">
+            <label class="mdl-textfield__label" for="start-date" id="start-date-label">Enter start date</label>
+          </div>
 
 
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="text"  id="end-date">
-          <label class="mdl-textfield__label" for="end-date" id="end-date-label">Enter end date</label>
-        </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text"  id="end-date">
+            <label class="mdl-textfield__label" for="end-date" id="end-date-label">Enter end date</label>
+          </div>
 
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="text"  id="start-time">
-          <label class="mdl-textfield__label" for="end-date" id="start-time-label">Enter time</label>
-        </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text"  id="start-time">
+            <label class="mdl-textfield__label" for="end-date" id="start-time-label">Enter time</label>
+          </div>
 
-        <div class="mdl-textfield mdl-js-textfield less-margin">
-          <textarea class="mdl-textfield__input" type="text" id="sms-msg" rows="8" columns="40"></textarea>
-          <label class="mdl-textfield__label" for="sms-msg">Text lines...</label>
+          <div class="mdl-textfield mdl-js-textfield less-margin">
+            <textarea class="mdl-textfield__input" type="text" id="sms-msg" rows="8" columns="40"></textarea>
+            <label class="mdl-textfield__label" for="sms-msg">Text lines...</label>
 
-        </div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="text"  id="break-msg" value="1">
-          <label class="mdl-textfield__label" for="break-msg">Number of Pages</label>
-        </div>
-      </form>
+          </div>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <input class="mdl-textfield__input" type="text"  id="break-msg" value="1">
+            <label class="mdl-textfield__label" for="break-msg">Number of Pages</label>
+          </div>
+      <%end%>
+
+      <!--<form action="#">
+
+
+      </form>-->
     </div>
   </div>
 </div>
