all form inputs changed

--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -18,34 +18,39 @@
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <!--<input class="mdl-textfield__input" type="text" id="campaign-name">-->
             <%= text_field_tag :campaign_name,nil,:class => "mdl-textfield__input"%>
-            <label class="mdl-textfield__label" for="phone-number-receiver">Campaign Name</label>
+            <label class="mdl-textfield__label" for="campaign_name">Campaign Name</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="phone-number-receiver">
-            <label class="mdl-textfield__label" for="phone-number-receiver">Phone Number for recipient</label>
+            <!--<input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="phone-number-receiver">-->
+            <%= text_field_tag :phone_number_receiver,nil,:class => "mdl-textfield__input",:type => "number" %>
+            <label class="mdl-textfield__label" for="phone_number_receiver">Phone Number for recipient</label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text" id="start-date">
-            <label class="mdl-textfield__label" for="start-date" id="start-date-label">Enter start date</label>
+            <!--<input class="mdl-textfield__input" type="text" id="start-date">-->
+            <%= text_field_tag :start_date,nil,:class => "mdl-textfield__input"%>
+            <label class="mdl-textfield__label" for="start_date" id="start-date-label">Enter start date</label>
           </div>
 
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text"  id="end-date">
-            <label class="mdl-textfield__label" for="end-date" id="end-date-label">Enter end date</label>
+            <!--<input class="mdl-textfield__input" type="text"  id="end-date">-->
+            <%= text_field_tag :end_date,nil,:class => "mdl-textfield__input"%>
+            <label class="mdl-textfield__label" for="end_date" id="end-date-label">Enter end date</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <input class="mdl-textfield__input" type="text"  id="start-time">
-            <label class="mdl-textfield__label" for="end-date" id="start-time-label">Enter time</label>
+            <!--<input class="mdl-textfield__input" type="text"  id="start-time">-->
+            <%= text_field_tag :start_time,nil,:class => "mdl-textfield__input"%>
+            <label class="mdl-textfield__label" for="start_time" id="start-time-label">Enter time</label>
           </div>
 
-          <div class="mdl-textfield mdl-js-textfield less-margin">
-            <textarea class="mdl-textfield__input" type="text" id="sms-msg" rows="8" columns="40"></textarea>
-            <label class="mdl-textfield__label" for="sms-msg">Text lines...</label>
+          <div class="mdl-textfield mdl-js-textfield less-margin mdl-textfield--floating-label">
+            <!--<textarea class="mdl-textfield__input" type="text" id="sms-msg" rows="8" columns="40"></textarea>-->
+            <%= text_area_tag :sms_msg, nil,:class => "mdl-textfield__input", :rows => 8, :cols => 40 %>
+            <label class="mdl-textfield__label" for="sms_msg">Text Message</label>
 
           </div>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
