--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
+<h1>Saved Campaigns</h1>
 
-     <h1>Saved Campaigns</h1>
+<% @campaigns.each do |campaign| %>
+    <p><%= campaign.campaign_name %></p>
+<%end%>
 
-
-    <p> <%= link_to 'Create New Campaign', "/home/new" %></p>
+<p> <%= link_to 'Create New Campaign', "/home/new" %> </p>
 
