--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -13,44 +13,46 @@
     </div>
     <div class="mdl-card__supporting-text">
 
-      <%= form_tag do %>
+      <%= form_for(@home) do |f| %>
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <%= text_field_tag :campaign_name,nil,:class => "mdl-textfield__input"%>
+            <%= f.text_field_tag :campaign_name,nil,:class => "mdl-textfield__input"%>
             <label class="mdl-textfield__label" for="campaign_name">Campaign Name</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <%= text_field_tag :phone_number_receiver,nil,:class => "mdl-textfield__input",:type => "number" %>
+            <%= f.text_field_tag :phone_number_receiver,nil,:class => "mdl-textfield__input",:type => "number" %>
             <label class="mdl-textfield__label" for="phone_number_receiver">Phone Number for recipient</label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <%= text_field_tag :start_date,nil,:class => "mdl-textfield__input"%>
+            <%= f.text_field_tag :start_date,nil,:class => "mdl-textfield__input"%>
             <label class="mdl-textfield__label" for="start_date" id="start-date-label">Enter start date</label>
           </div>
 
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <%= text_field_tag :end_date,nil,:class => "mdl-textfield__input"%>
+            <%= f.text_field_tag :end_date,nil,:class => "mdl-textfield__input"%>
             <label class="mdl-textfield__label" for="end_date" id="end-date-label">Enter end date</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <%= text_field_tag :start_time,nil,:class => "mdl-textfield__input"%>
+            <%= f.text_field_tag :start_time,nil,:class => "mdl-textfield__input"%>
             <label class="mdl-textfield__label" for="start_time" id="start-time-label">Enter time</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield less-margin mdl-textfield--floating-label">
-            <%= text_area_tag :sms_msg, nil,:class => "mdl-textfield__input", :rows => 8, :cols => 40 %>
+            <%= f.text_area_tag :sms_msg, nil,:class => "mdl-textfield__input", :rows => 8, :cols => 40 %>
             <label class="mdl-textfield__label" for="sms_msg">Text Message</label>
 
           </div>
+
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <%= text_field_tag :break_msg,"1",:class => "mdl-textfield__input"%>
             <label class="mdl-textfield__label" for="break_msg">Number of Pages</label>
           </div>
       <%end%>
+
 
     </div>
   </div>
