--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -3,7 +3,6 @@
   <button id="fab" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
     <i class="material-icons">add</i>
   </button>
-
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
     <div class="mdl-card__title" id="text-div">
       <h2 id="title-text" class="mdl-card__title-text">CAMPAIGN</h2>
@@ -13,49 +12,48 @@
     </div>
     <div class="mdl-card__supporting-text">
 
-      <%= form_for(@home) do |f| %>
+      <%= form_for (@home) do |f| %>
+
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <%= f.text_field :campaign_name,:class => "mdl-textfield__input"%>
-            <label class="mdl-textfield__label" for="campaign_name">Campaign Name</label>
+            <label class="mdl-textfield__label" for="home_campaign_name">Campaign Name</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <%= f.text_field :phone_number_receiver,:class => "mdl-textfield__input",:type => "number" %>
-            <label class="mdl-textfield__label" for="phone_number_receiver">Phone Number for recipient</label>
+            <label class="mdl-textfield__label" for="home_phone_number_receiver">Phone Number for recipient</label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <%= f.text_field :start_date,:class => "mdl-textfield__input"%>
-            <label class="mdl-textfield__label" for="start_date" id="start-date-label">Enter start date</label>
+            <label class="mdl-textfield__label" for="home_start_date" id="start-date-label">Enter start date</label>
           </div>
 
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <%= f.text_field :end_date,:class => "mdl-textfield__input"%>
-            <label class="mdl-textfield__label" for="end_date" id="end-date-label">Enter end date</label>
+            <label class="mdl-textfield__label" for="home_end_date" id="end-date-label">Enter end date</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
             <%= f.text_field :start_time,:class => "mdl-textfield__input"%>
-            <label class="mdl-textfield__label" for="start_time" id="start-time-label">Enter time</label>
+            <label class="mdl-textfield__label" for="home_start_time" id="start-time-label">Enter time</label>
           </div>
 
           <div class="mdl-textfield mdl-js-textfield less-margin mdl-textfield--floating-label">
             <%= f.text_area :sms_msg,:class => "mdl-textfield__input", :rows => 8, :cols => 40 %>
-            <label class="mdl-textfield__label" for="sms_msg">Text Message</label>
+            <label class="mdl-textfield__label" for="home_sms_msg">Text Message</label>
 
           </div>
-
-          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-            <%= text_field :break_msg,"1",:class => "mdl-textfield__input"%>
-            <label class="mdl-textfield__label" for="break_msg">Number of Pages</label>
-          </div>
-
       <%end%>
+
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <%= text_field_tag :break_msg,"1",:class => "mdl-textfield__input"%>
+        <label class="mdl-textfield__label" for="break_msg">Number of Pages</label>
+      </div>
 
 
     </div>
   </div>
 </div>
-
